syntax = "proto3";

package bst.v1;

import "bst/v1/location.proto";

option go_package = "github.com/tsuyoyo/bst-pj-proto/gen/go/bst/v1;bstv1";

service StudioRoomService {
  // POST /studios/{id}/rooms
  rpc CreateStudioRoom(CreateStudioRoomRequest)
      returns (CreateStudioRoomResponse);
  // GET /studios/{id}/rooms
  rpc ListStudioRooms(ListStudioRoomsRequest) returns (ListStudioRoomsResponse);
  // PUT /studios/{id}/rooms/{roomId}
  rpc UpdateStudioRoom(UpdateStudioRoomRequest)
      returns (UpdateStudioRoomResponse);
  // DELETE /studios/{id}/rooms/{roomId}
  rpc DeleteStudioRoom(DeleteStudioRoomRequest)
      returns (DeleteStudioRoomResponse);

  // POST /studios/{id}/rooms/{roomId}/infos
  rpc CreateStudioRoomInfo(CreateStudioRoomInfoRequest)
      returns (CreateStudioRoomInfoResponse);
  // GET /studios/{id}/rooms/{roomId}/infos
  rpc ListStudioRoomInfos(ListStudioRoomInfosRequest)
      returns (ListStudioRoomInfosResponse);
  // PUT /studios/{id}/rooms/{roomId}/infos/{infoId}
  rpc UpdateStudioRoomInfo(UpdateStudioRoomInfoRequest)
      returns (UpdateStudioRoomInfoResponse);
  // DELETE /studios/{id}/rooms/{roomId}/infos/{infoId}
  rpc DeleteStudioRoomInfo(DeleteStudioRoomInfoRequest)
      returns (DeleteStudioRoomInfoResponse);

  // GET studios/rooms/infos/types
  rpc ListRoomInfoTypes(ListRoomInfoTypesRequest)
      returns (ListRoomInfoTypesResponse);
}

message CreateStudioRoomRequest {
  string name     = 1;
  int32  capacity = 2;  // 定員
  int32  price    = 3;
  int32  size     = 4;  // 畳数
}

message CreateStudioRoomResponse {
  StudioRoom room = 1;
}

message ListStudioRoomsRequest {
  int32 studio_id = 1;
}

message GetStudioRoomResponse {
  StudioRoom room = 1;
}
message ListStudioRoomsResponse {
  repeated StudioRoom rooms = 1;
}

// PUT /studios/{studio_id}/rooms/{roomId}
message UpdateStudioRoomRequest {
  string name     = 1;
  int32  capacity = 2;
  int32  size     = 3;
  int32  price    = 4;
}

message UpdateStudioRoomResponse {
  StudioRoom room = 1;
}

message DeleteStudioRoomRequest {}

message DeleteStudioRoomResponse {
  bool success = 1;
}

message CreateStudioRoomInfoRequest {
  int32  type_id = 1;
  string key     = 2;
  string value   = 3;
}

message CreateStudioRoomInfoResponse {
  StudioRoomInfo info = 1;
}

message ListStudioRoomInfosRequest {}

message ListStudioRoomInfosResponse {
  repeated StudioRoomInfo infos = 1;
}

message UpdateStudioRoomInfoRequest {
  int32  type_id = 1;
  string key     = 2;
  string value   = 3;
}

message UpdateStudioRoomInfoResponse {
  StudioRoomInfo info = 1;
}

message DeleteStudioRoomInfoRequest {}

message DeleteStudioRoomInfoResponse {
  bool success = 1;
}

message ListRoomInfoTypesRequest {}

message ListRoomInfoTypesResponse {
  repeated StudioRoomInfoType types = 1;
}
